feat: initialize the project and add some input in the home page

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
+backend/node_modules
+frontend/node_modules/
+frontend/dist/
+
 ### macOS template
 # General
 .DS_Store
