--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.4.9",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-wechat-title": "^2.0.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
